--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <section id="home" class="hero">
         <div class="hidden">
-            <h1>Hello, I'm <br><span>Hong Gil-Dong</span></h1>
+            <h1>Hello, I'm <br><span>Hong Hyun-Jin</span></h1>
             <p>I am a <span class="typing-text"></span></p>
             <a href="#projects" class="btn-cta">View My Work</a>
         </div>
@@ -271,9 +271,9 @@
         <h2 class="section-title hidden">About Me</h2>
         <div class="hidden" style="text-align: center; max-width: 700px; margin: 0 auto; color: var(--text-sub);">
             <p>
-                사용자 경험을 최우선으로 생각하는 프론트엔드 개발자입니다. 
-                최신 웹 기술을 활용하여 빠르고 인터랙티브한 웹사이트를 만드는 것을 즐깁니다.
-                문제 해결을 위한 논리적 사고와 창의적인 디자인 감각을 겸비하고 있습니다.
+                사용자 경험을 최우선으로 생각하는 게임 개발자입니다. 
+                3D게임을 구현하여 팀플레이를 주로 이루는 게임을 만들고 있습니다.
+                다양한 사람들이 쉽고 재밌는 게임을 만들기위해 노력하고 있습니다다.
             </p>
         </div>
     </section>
