--- a/index.html
+++ b/index.html
@@ -282,24 +282,24 @@
         <h2 class="section-title hidden">My Projects</h2>
         <div class="project-grid">
             <div class="project-card hidden">
-                <h3>AI Dashboard</h3>
-                <p>인공지능 데이터를 시각화하여 보여주는 대시보드입니다. Chart.js와 React를 활용했습니다.</p>
+                <h3>3D 깃발뺏기 게임</h3>
+                <p>상대 진영에가서 먼저 깃발을 뺐고 다시 본인 진영에 돌아오는 플레이어가 승리합니다.</p>
                 <div class="tags">
                     <span>React</span>
                     <span>Chart.js</span>
                 </div>
             </div>
             <div class="project-card hidden">
-                <h3>E-Commerce App</h3>
-                <p>장바구니 기능과 결제 모듈이 연동된 반응형 쇼핑몰 웹사이트입니다.</p>
+                <h3>3D 거점 점령전 게임</h3>
+                <p>중앙 거점을 차지하기 위해 경쟁하는 게임입니다. </p>
                 <div class="tags">
                     <span>Vue.js</span>
                     <span>Firebase</span>
                 </div>
             </div>
             <div class="project-card hidden">
-                <h3>Portfolio Ver.1</h3>
-                <p>HTML, CSS, 바닐라 자바스크립트만을 이용하여 제작한 초기 포트폴리오 사이트입니다.</p>
+                <h3>3D 우주 스포츠 게임</h3>
+                <p>물리 엔진이 적용된 공간에서 공을 쳐서 골을 넣는 게임입니다.</p>
                 <div class="tags">
                     <span>HTML/CSS</span>
                     <span>JS</span>
